--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "angular": "1.6.10",
     "angular-animate": "1.6.10",
     "angular-aria": "1.6.10",
-    "angular-chosen-localytics": "1.9.3",
     "angular-confirm": "1.2.6",
     "angular-loading-bar": "0.9.0",
     "angular-locker": "2.0.5",
@@ -144,6 +143,7 @@
     "leaflet-active-area": "git+https://github.com/Mappy/Leaflet-active-area.git#f09574a3eb7fdce3a6778e4822955c6416415e43",
     "lodash": "4.17.21",
     "mapbox-gl": "1.13.1",
+    "match-sorter": "6.3.0",
     "medium-editor": "5.23.3",
     "method-override": "3.0.0",
     "migrate": "1.7.0",
